[tool.poetry]
name = "ibm-data-engine"
version = "0.2.2"
description = "Feast offline feature store implementation backed by the IBM Cloud Data Engine"
license = "Apache-2.0"
authors = [
    "Michal Siedlaczek <michal.siedlaczek@ibm.com>",
    "Abhay Ratnaparkhi <abhay.ratnaparkhi1@ibm.com>",
    "Jay Hou <jhou@us.ibm.com>",
]
maintainers = [
    "Michal Siedlaczek <michal.siedlaczek@ibm.com>",
    "Abhay Ratnaparkhi <abhay.ratnaparkhi1@ibm.com>",
]
readme = "README.md"
repository = "https://github.com/IBM/feast-ibm"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
# We current have issues installing dependencies for 3.11. We will remove <3.11 constraint as soon
# as the problem gets resolved.
python = "^3.8,<3.11"
feast = "^0.34.1"
ibmcloudsql = "^0.5.11"

[tool.poetry.dev-dependencies]
black = "^22.10"
diff-cover = "^7"
freezegun = "^1"
hypothesis = "^6"
isort = "^5"
pylint = "^2"
pytest = "^7"
pytest-cov = "^4"
testfixtures = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
